WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306642
[JSC][WASM][Debugger] Fix race condition causing debugger connection failures in JSC shell
https://bugs.webkit.org/show_bug.cgi?id=306642
Summary
[JSC][WASM][Debugger] Fix race condition causing debugger connection failures...
Yijia Huang
Reported
2026-01-30 12:38:48 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-30 12:38:55 PST
<
rdar://problem/169298750
>
Yijia Huang
Comment 2
2026-01-30 12:42:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57577
EWS
Comment 3
2026-01-30 12:54:18 PST
Committed
306517@main
(6582b6b3fb43): <
https://commits.webkit.org/306517@main
> Reviewed commits have been landed. Closing PR #57577 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug